getredash/redash/issues/2103 Fix: unnecessary horizontal scroll; fix: viz overlaps filters panel

--- a/client/app/pages/dashboards/dashboard.less
+++ b/client/app/pages/dashboards/dashboard.less
@@ -56,6 +56,26 @@
     }
 
     .gridster-item:not(.gridster-auto-height-enabled) {
+      visualization-renderer {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        left: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+
+        > filters {
+          flex-grow: 0;
+        }
+
+        > div {
+          flex-grow: 1;
+          position: relative;
+        }
+      }
+
+      .dynamic-table-container,
       .sunburst-visualization-container,
       .sankey-visualization-container,
       .map-visualization-container,
